website fix
Preventing horizontal scrolls.

--- a/oursite/main/static/styles.css
+++ b/oursite/main/static/styles.css
@@ -1,3 +1,8 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body { 
     /* background: url(https://images.unsplash.com/photo-1674420628423-bf7a338af32d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80) no-repeat center center fixed;  */
     background-color: #342f30;
